--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
 
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
 {% endblock %}
+  {% block myscript %}
+  {% endblock %}
 </head>
 
 <body>
@@ -57,7 +59,7 @@
 
   <footer class="footer">
     <div class="container">
-      <span class="text-muted">Footer...</span>
+      <span class="text-muted">Step-by-Step is a product of Stony Brook University BME 573</span>
     </div>
   </footer>
 
